--- a/oursite/treasure/templates/treasure/hints.html
+++ b/oursite/treasure/templates/treasure/hints.html
@@ -5,15 +5,15 @@
     <main>
         <h1>ヒント{{hint_index}}/4</h1>
         <h2>{{hint}}</h2>
-        <form action = "" method = "post">
+        <!-- <form action = "" method = "post">
           {% csrf_token %}
           <input type = "number" name = "number" value = "キーワードは？">
           <input type="submit" value="確認">
-        </form>
+        </form> 
 
         {% if result %}
           <h1>{{result}}</h1>
-        {% endif %}
+        {% endif %}  -->
     </main>
     <footer></footer>
 </body>
