hintsに答えるページへの遷移追加

--- a/oursite/treasure/templates/treasure/hints.html
+++ b/oursite/treasure/templates/treasure/hints.html
@@ -5,6 +5,9 @@
     <main>
         <h1>ヒント{{hint_index}}/4</h1>
         <h2>{{hint}}</h2>
+        <form action ="" method = "post">
+          <input type="submit" value="回答ページへ">
+        </form>
         <!-- <form action = "" method = "post">
           {% csrf_token %}
           <input type = "number" name = "number" value = "キーワードは？">
