--- a/oursite/treasure/templates/treasure/hints.html
+++ b/oursite/treasure/templates/treasure/hints.html
@@ -6,6 +6,7 @@
         <h1>ヒント{{hint_index}}/4</h1>
         <h2>{{hint}}</h2>
         <form action ="" method = "post">
+          {% csrf_token %}
           <input type="submit" value="回答ページへ">
         </form>
         <!-- <form action = "" method = "post">
